docs: add documantation for List Openings
